generated/manifests/prod-axon/glance/HTTPRoute-glance.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: glance
  namespace: media
spec:
  hostnames:
    - glance.json64.dev
  parentRefs:
    - name: default-gateway
      namespace: gateways
      sectionName: json64-dev-https
  rules:
    - backendRefs:
        - name: glance
          port: 8080
