generated/manifests/prod-axon/glance/SecurityPolicy-glance-oidc.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: glance-oidc
  namespace: media
spec:
  oidc:
    clientID: glance
    clientSecret:
      name: glance-oidc-client-secret
    forwardAccessToken: true
    provider:
      authorizationEndpoint: https://idm.json64.dev/ui/oauth2
      issuer: https://idm.json64.dev/oauth2/openid/glance
      tokenEndpoint: https://idm.json64.dev/oauth2/token
    scopes:
      - email
      - openid
      - profile
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: glance
