generated/manifests/prod-axon/glance/CiliumNetworkPolicy-allow-internet-egress-glance.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-internet-egress-glance
  namespace: media
spec:
  description: Allow glance to reach the public internet.
  egress:
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: glance
